BUG FIX: list items alignment in footer not centered

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -658,10 +658,7 @@ ul.users li a {
     .app.box p {
         margin-left: 220px;
     }
-
-    body > footer {
-        text-align: center;
-    }
+    
 
     body > footer .container {
         padding-left: 20px;
